# pipeline

./: .gitignore  CLAUDE.md  DATA_SOURCES.md  LEARNING_LOG.md  LICENSE  README.md  claude_code_phases.md  pyproject.toml  requirements.txt
_experiments/gis_swap/: RESULT.md  RESULT_backfill.md  RESULT_backfill_dongjak.md  RESULT_backfill_zone.md  RESULT_coverage.md  RESULT_coverage_impact.md  RESULT_db_status.md  RESULT_metric.md  RESULT_metric2.md  RESULT_product_impact.md  RESULT_retrain.md  RESULT_signal.md  RESULT_similar_validity.md  RESULT_swap_impact.md  RESULT_zonevec_impact.md  TRACK_SUMMARY.md  backfill_pnus.csv  (+25 more)
docs/: HANDOFF.md
redev/: __init__.py  paths.py
scripts/: _6gu_accept.py  _avm_validate.py  _build_ctx_measure.py  _d_spotcheck.py  _e_global_reports.py  _global_measure.py  _gosi_integrate_verify.py  _gosi_remeasure.py  _gosi_run.py  _gosi_urls.py  _phase3_final.py  _pipeline_accept.py  _pu_eval.py  _pu_spy.py  _report_accept.py  _report_contract_e2e.py  _reserialize_verify.py  _serve_e2e.py  _stage1_acceptance.py  _v11_gnn.py  _v11_infer.py  _v11_rematch.py  analyze_holdout_bias.py  zone_matching.py
tests/: test_aging.py  test_avm.py  test_baseline.py  test_build.py  test_eligibility.py  test_eval.py  test_feasibility.py  test_features.py  test_gnn.py  test_gosi_index.py  test_gosi_verify.py  test_infer.py  test_labels.py  test_land_price.py  test_location.py  test_nlp.py  test_pipeline.py  test_pu.py  test_rail.py  test_report.py  test_retrieval.py  test_stage1.py  test_transactions.py  test_zone_attrs.py  test_zone_matching.py  test_zoning.py
(+95 files in other folders)
